--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "aws-nodejs-typescript",
+  "name": "velix-mobile-api",
   "version": "1.0.0",
-  "description": "Serverless webpack example using Typescript",
-  "main": "handler.js",
+  "description": "Velix ID Mobile API",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
