--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "serverless-offline": "^3.20.0",
     "serverless-webpack": "^3.0.0",
     "ts-loader": "^2.3.7",
     "typescript": "^2.5.2",
@@ -14,6 +15,7 @@
   "author": "The serverless webpack authors (https://github.com/elastic-coders/serverless-webpack)",
   "license": "MIT",
   "dependencies": {
-    "firebase-admin": "^5.8.0"
+    "aws-sdk": "^2.219.1",
+    "request": "^2.85.0"
   }
 }
