--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@types/node": "^10.3.4",
     "serverless-offline": "^3.20.0",
     "serverless-webpack": "^3.0.0",
     "ts-loader": "^2.3.7",
@@ -16,6 +17,8 @@
   "license": "MIT",
   "dependencies": {
     "aws-sdk": "^2.219.1",
+    "jsonwebtoken": "^8.3.0",
+    "md5": "^2.2.1",
     "request": "^2.85.0"
   }
 }
