--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "description": "Velix ID Mobile API",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "ddb": "dynamodb-admin",
+    "dev": "sls offline start"
   },
   "devDependencies": {
     "@types/node": "^10.3.4",
+    "dynamodb-admin": "^2.0.6",
     "serverless-offline": "^3.20.0",
     "serverless-webpack": "^3.0.0",
     "ts-loader": "^2.3.7",
@@ -19,6 +21,8 @@
     "aws-sdk": "^2.219.1",
     "jsonwebtoken": "^8.3.0",
     "md5": "^2.2.1",
-    "request": "^2.85.0"
+    "request": "^2.85.0",
+    "serverless-dynamodb-client": "0.0.2",
+    "serverless-dynamodb-local": "^0.2.30"
   }
 }
